# db_operation

db_to_db_codex/: Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
db_to_db_codex/app/: db_to_db_action_service.py
db_to_db_codex/common/: __init__.py  audit.py  auth.py  correlation_middleware.py  creds.py  metrics.py  rate_limit.py  security_middleware.py
db_to_db_codex/common/processors/: __init__.py
db_to_db_codex/common/processors/action_engine/: __init__.py  actions_dataset.py  actions_multi.py  db_loader.py  db_sink.py  engine.py  models.py  polars_utils.py  registry.py  target_mapper.py
db_to_db_codex/examples/: request.json
db_to_db_codex/scripts/: run_local.ps1  run_tests.ps1
db_to_db_codex/tests/: test_actions.py  test_models.py  test_target_mapper.py
dbtodb_action_engine/dbtodb/: Dockerfile  README.md  requirements.txt
dbtodb_action_engine/dbtodb/app/: db_to_db_action_service.py
dbtodb_action_engine/dbtodb/common/: audit.py  auth.py  correlation_middleware.py  creds.py  metrics.py  rate_limit.py  security_middleware.py
dbtodb_action_engine/dbtodb/common/processors/action_engine/: __init__.py  actions_dataset.py  actions_multi.py  db_loader.py  db_sink.py  engine.py  models.py  polars_utils.py  registry.py
dbtodb_action_engine/dbtodb/tests/: test_actions_dataset.py  test_actions_multi.py  test_target_column_contract.py
dbtodb_action_engine/dbtodb/tests/fixtures/: sample_actions.json
